[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medx"
version = "0.1.4"
authors = [
  { name="Louise Lu", email="ylu106@jhu.edu" },
]
description = "A python package to automate the calculation of Medication Regimen Complexity from EHR data"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  'pandas'
]

[tool.setuptools.packages.find]
namespaces = true
where = ["src"]

[tool.setuptools.package-data]
"medx.data" = ["*.csv"]


[project.urls]
"Homepage" = "https://github.com/tirilab/medx"
"Bug Tracker" = "https://github.com/tirilab/medx/issues"